--- a/_posts/2025-11-10-A-Journey.md
+++ b/_posts/2025-11-10-A-Journey.md
@@ -6,32 +6,86 @@ comments: true
 author: Thomas Debelle
 ---
 
-> *To my mother that is always there for me*,
+> *À ma mère qui a toujours été là pour moi*,
 > 
-> *To Elena, Ilias and Amira that are my dearest friends and who are always there to lift me up whenever I am at my lowest*
+> *À mes amis Elena, Ilias et Amira qui ont toujours su m'écouter*
 
-If I did everything right, this small blog post should be pushed on my birthday. I should be 22 years old at this time and I wanted to pause for a second and share my story and battles.
+Si j'ai tout fait correctement, ce post devrait se publier le 10 novembre jour de mon anniversaire.
 
-- [The genesis](#the-genesis)
-  - [Childhood](#childhood)
-  - [COVID](#covid)
-  - [Bachelor](#bachelor)
-  - [The Cornerstone](#the-cornerstone)
-  - [Climbing up the slope](#climbing-up-the-slope)
-- [Reflection \& What to come](#reflection--what-to-come)
+- [Genèse](#genèse)
+  - [Enfance](#enfance)
+  - [Je vais bien!](#je-vais-bien)
+    - [COVID](#covid)
+    - [Université](#université)
+  - [Le moment fatal](#le-moment-fatal)
+    - [Ouvrir son âme](#ouvrir-son-âme)
+  - [Remonter la pente](#remonter-la-pente)
+    - [Plus jamais](#plus-jamais)
+    - [Réveil amère](#réveil-amère)
+    - [Remettre du sens](#remettre-du-sens)
 
-I started writing this around early of June 2025. It is a form of testimony, a way for me to express to the world how I feel, a way for me to show the real me. The "me" that is finally in line with myself, the one that faced his demons, traumas and anxieties. I hope I won't let this post incomplete.
+J'ai commence à écrire ce post début Juin 2025. C'est une forme de témoignage, une manière pour moi d'exprimer au Monde comment je me sens et laisse s'exprimer le vrai moi. Ce moi authentique qui est enfin en phase avec le moi que je montre. Le moi qui n'a pas peur de se montrer et qui a affronté ses démons, traumas, anxiétés, ... J'espère que ce post ne sera pas inachevé.
 
-# The genesis
+Ce que j'écris ici est pour moi-même et je ne cherche pas à excuser mes actes, à me dépeindre en victime, à refouler la faute sur les autres. Je cherche simplement à me mettre à nu pour renaitre. Je laisse tomber tout l'apparat dont je m'étais drapé ses dernières 20 années. Ces habits et défenses de fortune qui n'ont fait que blesser les autres mais surtout moi-même.
 
-## Childhood
+# Genèse
 
-## COVID
+## Enfance
 
-## Bachelor
+## Je vais bien!
 
-## The Cornerstone
+Dissocier était pour moi un méchanisme de défense naturel. Quand j'avais peur, quand mes parents se disputait, quand je me sentais pas à ma place, ... je dissociais. Je m'étais mes émotions en pause de manière invonlontaire et je déconnectais. Cela s'est accéléré après mon passage chez le psy en étant enfant où elle m'a suggéré de bloquer mes émotions. Enfin, c'est ce que j'en avais retenu et je me suis exécuté. Je voulais en finir au plus vite avec la psy, je ne voulais plus la voir, je ne voulais plus voir ma mère le visage triste tendant son billet orange à la psychologue. On m'a diagnostiqué "*hypersensible*" et "*haut potentiel*", j'étais content, ça renforçait mon étiquette de petit intello qui chiale quand il a de mauvaise note. Au fond, je voulais quitter ce centre, je voulais juste être normal. Malheureusement, je n'ai jamais été normal.
 
-## Climbing up the slope
+J'étais en auto-pilote, j'étais le meilleure dans les exercices de la psy, c'était trop facile. Et quand je rentrais le soir chez moi et que je pleurais dans ma chambre je me disais c'était un simple contre-coup. Je pleurais en silence le visage dans mon coussin, j'écrivais, je pensais jusqu'à ce que mon hyperactivité cérébrale me poussait à dormir. Et le matin, je me réveillais en pleine forme et j'en avais même oublié les sanglots de la veille. J'étais vraiment le meilleur élève de cette psy j'ai même pas dû y retourner !
 
-# Reflection & What to come
+J'étais pas sans faille je vous le rassure. Des fois, j'explosais complètement, j'avais des moments où je devenais irritable, incontrôlable. Quelqu'un abime mon sac sans le faire exprès ? Je pleure, je crie, je gesticule, j'arrive en furie dans le bureau de la préfète, je veux une exécution en place publique pour la coupable. J'ai une mauvaise note ? Je pleure jusqu'à ce que mes larmes effacent l'encre rouge de la copie, je ne pourrais plus jamais rentré à la maison je suis fini. Merde, j'ai perdu mon sac, c'est un cataclysme émotionnel. Ce tsunami m'emporte et je crie je saute dans la rue. Tout le monde me regardait dans la rue mais c'était incontrôlable. Je peux encore en trouver quelques-uns des exemples, mais toutes ces choses spécifiques étaient tellement courant chez moi que c'était normal aux yeux de mes proches. "*C'est rien, c'est Thomas*", "*Prends tes gouttes...*", ... Au fond, je savais que ce n'était pas normal mais je gardais tout pour moi. Quand je me cachais dans ma chambre je m'en voulais d'agir ainsi mais plus que ça, je ne comprenais pas pourquoi je me transformais de cette manière. Tous ces évènements m'ont marqué à jamais.
+
+### COVID
+
+Pendant le COVID c'est là que ça s'est gâté, j'étais seul dans ma chambre, il fallait que je trouve un autre moyen de bloquer mes émotions. Donc je jouais quasiment constamment avec sur un second écran YouTube en lecture automatique. Je stimulais tous mes sens pour qu'aucun stimuli puisse atteindre mon lobe frontal et aucune pensé déroutante n'avais le temps de jaillir.
+
+### Université
+
+À l'unif, ça allait mieux. Je ne pleurais plus pour un oui ou pour un non mais je devenais plus aigri, plus arrogant, ... ou du moins je le laissais paraitre. J'oscillais entre "je suis le meilleur" à "je suis le pire" mais je restais surtout sur le second. Donc pour me protéger je construisais cette personnalité orgueilleuse, intransigeante. J'étais entrain de me perdre dans les abysses de mon âme. À nouveau, j'explosais, je devenais violent envers les autres verbalement à leur dire des choses que je ne pensais même pas et dont je ne me savais pas capable de dire.
+
+Après avoir vécu des agressions, j'ai eu du mal à me rapproprier ma sexualité et le COVID ayant détruit tous mes repères sociaux, je ne savais pas comment nouer des relations plus concrètes que celles de simple camarade. Donc, je dissociais, comme lors de ma première fois, je n'étais pas moi-même. Par défense, je dissociais pour plaire à l'autre même si l'autre ne me plaisait pas forcément. Il ne fallait pas qu'il m'abandonne. Pour la première fois de ma vie j'étais confronté à devoir exprimer mes sentiments les plus profonds. Mais j'avais depuis si longtemps couper ce cordon ombilical entre mes sentiments et mes expressions que je ne savais même plus comment dire honnêtement que quelqu'un me plaisait, que j’appréciais sa présence, qu'elle égayait ma journée. J'ai fini par la faire fuir, j'ai fini par être méchant envers elle alors qu'au fond je l'appréciais vraiment. J'étais déboussolé par le cri de mes émotions, c'était quelque chose d’innommable et incompréhensible. Même si je me suis déjà excusé auprès d'elle, je voulais à nouveau le formuler et j'espère qu'elle pourra trouver un sens aux maux à travers mon texte.
+
+## Le moment fatal
+
+Mes phases de dissociation devenait de plus en plus fortes et j'étais de plus en plus esseulé. Cet échappatoire que je m'étais construit allait entrainer ma perte sans que je le sache. Ou plutôt, je savais que ça allait mal se terminer mais mes euphories/disphories devenaient incontrolables. Ce genre de choses, il faut le voir pour le croire mais le vivre pour le comprendre, je n'essaye pas de me cacher derrière quelque chose de médical mais je veux tenter d'expliquer mes actes. J'avais besoin de cette attention et dans ces moments, tous les déclencheurs devenait plus sensibles. Mes traumas, mes agressions vécues, ... tout ressortait d'une manière incontrolable. Je devenais quelqu'un d'autres ou plutôt, cette chimère qui someillait en moi prenait le contrôle. Cette chimère que j'ai nourri depuis mes 10 ans de mes insécurités, de mes peurs et angoisses.
+
+Cela devenait trop, et j'ai enfin réalisé le 22 Octobre 2024 quand je suis allé trop loin. Quand j'ai compris que je devenais la mauvaise personne pour de vrai. Que ce n'était plus un simple espace de jeu sous contrôle. Je pensais naïvement que laisser vivre cette partie de moi de temps en temps allait permettre de l'expier, me permettrait de me rapproprier ma vie et ultimement me permettrait de ne plus dissocier. Mais au plus le temps passait au plus je m'enfonçais. Et puis... j'ai ouvert les yeux.
+
+Je me suis réveillé de cette torpeur, terrifié, accablé je me suis éveillé. Je suis immédiatement parti cherché de l'aide. J'ai écumé le répertoires des psychologues (note: si vous cherchez un psychologue à Bruxelles, commencez [ici](https://psybru.be)), j'en ai appelé une dizaine je crois. Je suis passé d'un déni à un besoin d'aide pressante, urgente.
+
+### Ouvrir son âme
+
+Je me suis assit chez la première psychologue, cela faisait quasiment 10 ans que je n'en avais pas vu une. Elle se trouvait au fin fond de la campagne Bruxelloise, au milieu des marais qui jadis composait la plupart de Bruxelles. C'était un véritable périple et quand elle m'ouvrit la porte je me suis assis dans son canapé confortable. Mais j'avais honte, je n'ai pas réussi à tout lui dire.
+
+Puis j'en ai vu un autre, cette fois-ci il n'était pas retranché dans les marécages mais simplement sur une fauteuil au troisième étage d'un appartement sympathique. Au bout de la quatrième séance, je crois, j'ai réussi à lui expliquer l'élément déclencheur de ma venue. Il m'a écouté et j'ai continué à parler. Ce quelque chose si lourd, balayé en une phrase. J'en avais fait une fixette mais soudainement cela s'évanouissait dans le creux de son oreille. Par la suite, je répétais plusieurs fois ce qu'il s'était passé, en appuyant sur les termes, mais à chaque fois il restait impassible derrière ses lunettes. À ce jour je ne sais pas si ça m'a fait du bien ou que j'aurais voulu qu'il m'exclut de son appartement et me congédie mais ce n'est pas ce qu'il s'est passé. 
+
+
+
+## Remonter la pente
+
+### Plus jamais
+
+Cela ne s'est pas reproduit, j'ai compris mes erreurs. Je les ai mesuré. J'ai quitté pour de bon twitter vers avril 2025. J'ai compris mes déclencheurs et les catalyseurs de mes phases dissociatives. Mais est-ce trop tard ? Est-ce que je peux (re)trouver un sens à ma vie ?
+
+### Réveil amère
+
+Et puis un beau jour, on se réveille et on réalise qu'on n'est pas le gentil du film. Qu'on est plus ce personnage secondaire qui se fait frapper par son ex car c'est un sacré con. Sauf que la baffle n'est jamais venu de quelqu'un quand on le voulait. À vrai dire, il n'y a jamais eu de baffle, simplement un long réveil douloureux où on s'extirpe de la voiture fumante et qu'on tourne notre regard sur le sillage désert qu'on a laissé derrière soi. 
+
+On se réveille groggy et déboussolé. On s'en veut de ne pas avoir réagit et on en veut aux autres pour avoir été trop gentils avec nous. On veut remonter le temps, changer le cours des choses, annuler, changer, modifier, annuler. Mais rien n'y fait. Les pneus sont dégonflés, le pare-choc complètement raplatit contre l'arbre qui s'est dressé sur notre route dévastatrice. Je me souviens ce moment vers la fin octobre dans le downtown jack, je marchais vide de sens vers les toilettes du bar. J'avais tout gâché et que soudainement, l'auto-pilote s'était désactivé à l'impact comme une Tesla pour éviter des problèmes judiciaires. C'était un sacré coup de con que je m'étais fait. C'est quand on perd quelque chose qu'on se rend compte de sa valeur, aussi niais que ça l'est, c'est pourtant assez véridique.
+
+Pour moi, tout cela était normal, jusqu'à j’atterrisse à 20 ans, de mon plein gré, chez un psy. J'ai passé 4 mois avec lui. 4 mois à discuter, à m'ouvrir. Après cela, je pensais être guérit que c'était bon j'avais vidé mon sac je pouvais avancer ! Mais mes angoisses sont revenues de plus belle quand j'ai commence à passer plus de temps seul. 
+
+### Remettre du sens
+
+J'ai alors compris qu'il me faudrait plus que les 8 séances gratuites (note: vous avez droit à 8 séances gratuites depuis le COVID et 20*20€ remboursé par séance avec la mutuelle) mais qu'il me faut un véritable travail de fond. Je pensais avoir fini car je n'avais plus rien à raconter, que je ressassais les mêmes choses en boucle et en boucle entrain de radoter comme mamie. Puis, j'ai compris quelque chose, j'ai compris qu'il me faut plus qu'une simple introspection mais une ré-appropriation de mes souvenirs, de mes sentiments, de mes traumatismes, ... Il fallait que j'arrête, qu'on arrête, de banaliser mes crises d'humeurs, ma dépression, mes pensées suicidaires, ... Qu'à 11 ans s'écrire une lettre au soi du futur où on lui conte à quel point on se sent misérable et qu'on a envie d'en finir avec la vie et de découvrir à 12 ses parents l'attendant la dite lettre en main pour lui demander ce qu'il se passe n'est pas une expérience banale. Ce n'est pas juste un fait, un souvenir, ... c'était un élément marquant un embranchement, quelque chose qui marque un gosse. Je devais colorer mes souvenirs, les teinter de mes sentiments, remettre un sens à ces souvenirs qui me hantent.
+
+J'avais tellement banaliser le suicide et la dépression, c'était quelque chose d'inhérent en moi et que bon, j'étais pas à plaindre donc je la ferme et j'avance. En rechutant chez le psy, c'est là que j'ai compris qu'il fallait que je prenne ce *sur-moi* à contre-sens. Non ce n'est pas normal de se sentir ainsi, non on a le droit d'être en colère quand on nous agresse, non tout garder pour soi n'est pas une solution, non ne fais plus jamais comme ça.
+
+J'ai pleuré pour la première fois chez lui, 6 mois après notre rencontre, je me suis effondré. Et j'ai compris que le chemin sera long mais c'est celui que je dois emprunter pour changer. Changer pour moi et pour les autres. Pour que je mette un stop à ma folie destructrice, pour que je puisse espérer à nouveau tendre au bonheur et à la joie après mes actions. Je me devais de faire ça.
+
+**Ilias, penser à son soi petit.**
