Solve latex formating

--- a/_posts/2025-12-15-Auto-ADPQ.md
+++ b/_posts/2025-12-15-Auto-ADPQ.md
@@ -35,7 +35,7 @@ $$
 \text{minimize} \quad \|\mathbf{w}\|_0 + \lambda' \|\mathbf{w}\|_1
 $$
 
-This is solved using a bisection method (similar to Brent's method) to find the optimal regularization parameter $\lambda'$ that achieves a target outlier ratio $\alpha$.
+This is solved using a bisection method (similar to Brent's method) to find the optimal regularization parameter $$\lambda'$$ that achieves a target outlier ratio $$\alpha$$.
 
 ### 2. Dual Quantization Scheme
 
