Update CV, added new tags and new thumbnail

--- a/_posts/2025-12-15-Auto-ADPQ.md
+++ b/_posts/2025-12-15-Auto-ADPQ.md
@@ -4,9 +4,10 @@ title: "Quantization of LLM: Auto-ADPQ"
 subtitle: Data-free calibration for efficient quantization
 gh-repo: Tfloow/auto_adpq
 gh-badge: [star, fork, follow]
-tags: [Master Thesis,academic, Artificial Intelligence,IT]
+tags: [projects, Master Thesis,academic, Artificial Intelligence,IT]
 comments: true
 mathjax: true
+thumbnail-img: /assets/img/ollama.jpg
 author: Thomas Debelle
 ---
 
@@ -230,4 +231,6 @@ The complete source code, documentation, and examples are available on [GitHub](
 
 *This project is part of my master's thesis on efficient LLM deployment. If you find it useful or have questions, feel free to open an issue on GitHub or leave a comment below!*
 
+---
 
+Illustration of the blog post was found on Pinterest but couldn't find any attributions. If you know, feel free to add a comment so I give credits where it is due 😊. 
